--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +13,23 @@
     "@types/node": "^16.18.40",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
+    "dayjs": "^1.11.8",
+    "eslint": "8.43.0",
+    "framer-motion": "^10.16.0",
+    "js-cookie": "^3.0.5",
+    "notistack": "^3.0.1",
+    "postcss": "8.4.24",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.0",
+    "react-multi-select-component": "^4.3.4",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
+    "sass": "^1.63.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
