--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
     "sass": "^1.63.5",
+    "scroll-lock": "^2.1.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -61,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/scroll-lock": "^2.1.0",
     "gh-pages": "^6.0.0"
   }
 }
