--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chilli-posts-react",
-  "homepage": "https://alex1-w.github.io/chilliposts",
+  "homepage": "https://github.io/alex1-w/chilliposts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
